@@ -8,33 +8,31 @@
 	<f:if condition="{configurations->f:count()}">
 		<p><f:translate id="external_tables_intro" /></p>
 
-		<f:if condition="{hasScheduler}">
-			<f:if condition="{globalWriteAccess} == 'all' && {rights.scheduler}">
-				<f:be.infobox title="{f:translate(id: 'full_autosync')}" state="-2" disableIcon="true">
-					<f:if condition="{fullSynchronizationTask}">
-						<f:then>
-							<f:if condition="{fullSynchronizationTask.disabled}">
-								<f:then>
-									<p><f:translate id="disabled_full_autosync" /></p>
-								</f:then>
-								<f:else>
-									<p><f:translate id="next_full_autosync" arguments="{0: fullSynchronizationTask.frequencyText, 1: fullSynchronizationTask.nextexecution}" /></p>
-									<f:render partial="DataModule/Actions/EditButton" arguments="{uid: fullSynchronizationTask.uid}" />
-									<f:render partial="DataModule/Actions/DeleteButton" arguments="{uid: fullSynchronizationTask.uid}" />
-								</f:else>
-							</f:if>
-						</f:then>
-						<f:else>
-							<p><f:translate id="no_full_autosync" /></p>
-							<f:render partial="DataModule/Actions/AddButton" arguments="{table: 'all', index: ''}" />
-						</f:else>
-					</f:if>
-				</f:be.infobox>
-			</f:if>
+		<f:if condition="{globalWriteAccess} == 'all' && {rights.scheduler}">
+			<f:be.infobox title="{f:translate(id: 'full_autosync')}" state="-2" disableIcon="true">
+				<f:if condition="{fullSynchronizationTask}">
+					<f:then>
+						<f:if condition="{fullSynchronizationTask.disabled}">
+							<f:then>
+								<p><f:translate id="disabled_full_autosync" /></p>
+							</f:then>
+							<f:else>
+								<p><f:translate id="next_full_autosync" arguments="{0: fullSynchronizationTask.frequencyText, 1: fullSynchronizationTask.nextexecution}" /></p>
+								<f:render partial="DataModule/Actions/EditButton" arguments="{uid: fullSynchronizationTask.uid}" />
+								<f:render partial="DataModule/Actions/DeleteButton" arguments="{uid: fullSynchronizationTask.uid}" />
+							</f:else>
+						</f:if>
+					</f:then>
+					<f:else>
+						<p><f:translate id="no_full_autosync" /></p>
+						<f:render partial="DataModule/Actions/AddButton" arguments="{table: 'all', index: ''}" />
+					</f:else>
+				</f:if>
+			</f:be.infobox>
 		</f:if>
 
 		<f:render partial="DataModule/SearchField" />
-		<table class="table table-striped table-hover" id="tx_externalimport_list" data-list-type="sync" data-has-scheduler="{hasScheduler}">
+		<table class="table table-striped table-hover" id="tx_externalimport_list" data-list-type="sync">
 			<thead>
 				<tr>
 					<th class="column-icon">&nbsp;</th>
@@ -51,12 +49,10 @@
 						<f:translate id="group" />
 					</th>
 					<th class="column-actions">&nbsp;</th>
-					<f:if condition="{hasScheduler}">
-						<th class="column-autosync">
-							<f:translate id="autosync" />
-						</th>
-						<th class="column-autosync-actions">&nbsp;</th>
-					</f:if>
+					<th class="column-autosync">
+						<f:translate id="autosync" />
+					</th>
+					<th class="column-autosync-actions">&nbsp;</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -98,60 +94,58 @@
 								</f:if>
 							</div>
 						</td>
-						<f:if condition="{hasScheduler}">
-							<td>
-								<f:if condition="{configuration.automated}">
-									<f:then>
-										<f:if condition="{configuration.task.disabled}">
-											<f:then>
-												<f:translate id="disabled_autosync" />
-											</f:then>
-											<f:else>
-												<f:translate id="next_autosync" arguments="{0: configuration.task.frequencyText, 1: configuration.task.nextexecution}" />
-												<f:if condition="{configuration.groupTask}">
-													<f:translate id="autosync_for_group" />
-												</f:if>
-											</f:else>
-										</f:if>
-									</f:then>
-									<f:else>
-										<f:translate id="no_autosync" />
-									</f:else>
-								</f:if>
-							</td>
-							<td class="tx_externalimport_actions">
-								<f:if condition="{configuration.writeAccess} && {rights.scheduler}">
-									<f:then>
-										<f:if condition="{configuration.automated}">
-											<f:then>
-												<f:if condition="{configuration.task.disabled}">
-													<f:then>
-														<span class="label label-default">disabled</span>
-													</f:then>
-													<f:else>
-														<f:if condition="{configuration.groupTask}">
-															<f:then>&nbsp;</f:then>
-															<f:else>
-																<div class="btn-group input-group-btn">
-																	<f:render partial="DataModule/Actions/EditButton" arguments="{uid: configuration.task.uid}" />
-																	<f:render partial="DataModule/Actions/DeleteButton" arguments="{uid: configuration.task.uid}" />
-																</div>
-															</f:else>
-														</f:if>
-													</f:else>
-												</f:if>
-											</f:then>
-											<f:else>
-												<div class="btn-group">
-													<f:render partial="DataModule/Actions/AddButton" arguments="{table: configuration.table, index: configuration.index}" />
-												</div>
-											</f:else>
-										</f:if>
-									</f:then>
-									<f:else>&nbsp;</f:else>
-								</f:if>
-							</td>
-						</f:if>
+						<td>
+							<f:if condition="{configuration.automated}">
+								<f:then>
+									<f:if condition="{configuration.task.disabled}">
+										<f:then>
+											<f:translate id="disabled_autosync" />
+										</f:then>
+										<f:else>
+											<f:translate id="next_autosync" arguments="{0: configuration.task.frequencyText, 1: configuration.task.nextexecution}" />
+											<f:if condition="{configuration.groupTask}">
+												<f:translate id="autosync_for_group" />
+											</f:if>
+										</f:else>
+									</f:if>
+								</f:then>
+								<f:else>
+									<f:translate id="no_autosync" />
+								</f:else>
+							</f:if>
+						</td>
+						<td class="tx_externalimport_actions">
+							<f:if condition="{configuration.writeAccess} && {rights.scheduler}">
+								<f:then>
+									<f:if condition="{configuration.automated}">
+										<f:then>
+											<f:if condition="{configuration.task.disabled}">
+												<f:then>
+													<span class="label label-default">disabled</span>
+												</f:then>
+												<f:else>
+													<f:if condition="{configuration.groupTask}">
+														<f:then>&nbsp;</f:then>
+														<f:else>
+															<div class="btn-group input-group-btn">
+																<f:render partial="DataModule/Actions/EditButton" arguments="{uid: configuration.task.uid}" />
+																<f:render partial="DataModule/Actions/DeleteButton" arguments="{uid: configuration.task.uid}" />
+															</div>
+														</f:else>
+													</f:if>
+												</f:else>
+											</f:if>
+										</f:then>
+										<f:else>
+											<div class="btn-group">
+												<f:render partial="DataModule/Actions/AddButton" arguments="{table: configuration.table, index: configuration.index}" />
+											</div>
+										</f:else>
+									</f:if>
+								</f:then>
+								<f:else>&nbsp;</f:else>
+							</f:if>
+						</td>
 					</tr>
 				</f:for>
 			</tbody>
