@@ -25,6 +25,7 @@
 	"version": "4.3.2",
 	"require": {
 		"typo3/cms-core": ">=9.5.0,<11.0",
+		"typo3/cms-scheduler": ">=9.5.0,<11.0",
 		"cobweb/svconnector": ">=3.4.0"
 	},
 	"replace": {
