@@ -27,7 +27,8 @@ $EM_CONF[$_EXTKEY] = [
                         'depends' =>
                                 [
                                         'svconnector' => '3.4.0-0.0.0',
-                                        'typo3' => '8.5.0-10.4.99',
+                                        'typo3' => '9.5.0-10.4.99',
+                                        'scheduler' => '',
                                 ],
                         'conflicts' =>
                                 [
@@ -35,7 +36,6 @@ $EM_CONF[$_EXTKEY] = [
                         'suggests' =>
                                 [
                                         'externalimport_tut' => '2.0.1-0.0.0',
-                                        'scheduler' => '',
                                 ],
                 ],
 ];
